# ai_gpts_python

./: README.md  index.html  location.py
app/db/: database.py  models.py
app/models/: hero.py
fast-api-pr/api/: check.py  database.py  main.py  settings.py
fast-api-pr/api/console/: db_cli.py
fast-api-pr/api/controllers/: Logger.py  Todos.py  TokenManager.py  Users.py  routers.py
fast-api-pr/api/data/: models.py  schemas.py
fast-api-pr/api/repositories/: TodoRepository.py  UserRepository.py
fast-api-pr/api/security/: crypto.py  manage_jwt.py
fast-api-pr/api/security/oAuth2/: client_generator.py
fast-api-pr/frontend/: package.json
fast-api-pr/frontend/app/: page.tsx
financial_analyst/: analyst.py  settings.py
financial_analyst/api/: assistant.py  finance_statements.py
financial_analyst/core/: finance_statements.py
genai_kafka/ecomm/: main.py  pyproject.toml  server.properties
genai_kafka/ecomm/app/: customer_order.proto  customer_order_pb2.py
genai_kafka/ecomm/docker/: Dockerfile  Dockerfile.java
gpt/: location.py  openapi.json
gpt/app/models/: team.py
gpt/app/models/common/: all.py
llm_first_run/: README.md  g_colab.ipynb  langchain_gemini.ipynb  llm_huggingface.ipynb  llm_run_from_local.py  llm_run_huggingface_colab.ipynb  pyproject.toml  run_tensor.ipynb
sports/api/: database.py  main.py  requirements.txt  settings.py
sports/api/controllers/: Performances.py  Players.py  Teams.py
sports/api/data/: crud_query.py  models.py  schemas.py
streamlit/calc/: calc.py
